@@ -47,6 +47,7 @@ depth: 1
  * Support text resizing in workflow steps cards (Ivy Jeptoo)
  * Ignore images added via fixtures when using `WAGTAILIMAGES_FEATURE_DETECTION_ENABLED` to avoid errors for images that do not exist (Aman Pandey)
  * Restore ability to perform JSONField query operations against StreamField when running against the Django 4.2 development branch (Sage Abdullah)
+ * Ensure there is correct grammar and pluralisation for Tab error counts shown to screen readers (Aman Pandey)
 
 ### Documentation
 
